--- a/knockout/book_knockout_succinctly/index.html
+++ b/knockout/book_knockout_succinctly/index.html
@@ -10,15 +10,52 @@
 
 <body>
     <h1>Interactive bindigs</h1>
-
     <form action="#" method="POST">
-        <!--ToDo-->
+        <!--The value bind-->
+        <p data-bind="event: {mouseover: showDetails, mouseout: hideDetails}">First Name: <input data-bind="value: firstName" /></p>
+        <p>Last Name: <input data-bind="value: lastName" /><span data-bind="visible: details">Your given name</span></span>
+        </p>
+        <p>Primary phone: <input data-bind="value: primaryPhone" /></p>
+        <p>Secoundary phone: <input data-bind="value: secoundaryPhone, enable: primaryPhone().length > 3" /></p>
+        <!---->
+        <!--The click bind-->
+        <p><button data-bind="click: saveUserData">ClickHere</button></p>
+        <p><button data-bind="click: displayName">Display name</button></p>
+        <p><button data-bind="click: setName">Set name</button></p>
+        <!---->
     </form>
     <script type="text/javascript" src="knockout-3.5.1.js"></script>
     <script type="text/javascript">
-        function personViewModel() {
+        this.saveUserData = function(model, event) {
+            let fullName = model.firstName() + " " + model.lastName();
+            alert(fullName + " is trying to checkout!");
+            if (event.ctrlKey) {
+                alert("He was holding down the Control Key for some rason.");
+            }
+        };
+        this.displayName = function() {
+            alert("This is a first name:" + this.firstName());
+        };
+        this.setName = function() {
+            this.firstName("Alice");
+            alert("This is a new first name: " + this.firstName());
+        };
 
-        }
+        this.showDetails = function(target, event) {
+            this.details(true);
+        };
+        this.hideDetails = function(target, event) {
+            this.details(false);
+        };
+
+        function personViewModel() {
+            this.firstName = ko.observable("john");
+            this.lastName = ko.observable("smith");
+            this.details = ko.observable(false);
+            this.primaryPhone = ko.observable("");
+            this.secoundaryPhone = ko.observable("");
+        };
+        ko.applyBindings(new personViewModel());
     </script>
 </body>
 
