Initializing the chapter 7

--- a/knockout/book_knockout_succinctly/partThree.html
+++ b/knockout/book_knockout_succinctly/partThree.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css" />
     <title>External Data</title>
 </head>
 
 <body>
-
+    <h1>External Data</h1>
+    <form action="#" method="POST">
+        <p>First name: <input data-bind="value: firstName" /></p>
+        <p>Last name: <input data-bind="value: lastName" /></p>
+    </form>
 </body>
 
 </html>
