--- a/knockout/book_knockout_succinctly/partThree.html
+++ b/knockout/book_knockout_succinctly/partThree.html
@@ -14,6 +14,12 @@
     <form action="#" method="POST">
         <p>First name: <input data-bind="value: firstName" /></p>
         <p>Last name: <input data-bind="value: lastName" /></p>
+        <div>
+            Your favorite food:
+            <select data-bind="options: activities, values: favoriteHobby">
+                
+            </select>
+        </div>
     </form>
 </body>
 
