Adding jquery to project

--- a/knockout/book_knockout_succinctly/partThree.html
+++ b/knockout/book_knockout_succinctly/partThree.html
@@ -16,11 +16,14 @@
         <p>Last name: <input data-bind="value: lastName" /></p>
         <div>
             Your favorite food:
-            <select data-bind="options: activities, values: favoriteHobby">
-                
-            </select>
+            <select data-bind="options: activities, values: favoriteHobby"></select>
         </div>
+        <p><button data-bind="click: loadUserData">Load Data</button></p>
     </form>
+    <script type="text/javascript" src="knockout-3.5.1.js"></script>
+    <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
+    <script type="text/javascript">
+    </script>
 </body>
 
 </html>
