Include API to get zipcode

--- a/knockout/book_knockout_succinctly/partThree.html
+++ b/knockout/book_knockout_succinctly/partThree.html
@@ -12,17 +12,41 @@
 <body>
     <h1>External Data</h1>
     <form action="#" method="POST">
-        <p>First name: <input data-bind="value: firstName" /></p>
-        <p>Last name: <input data-bind="value: lastName" /></p>
+        Insert Zip code:
+        <p>Zip Code: <input data-bind="value: zipCode" /></p>
         <div>
-            Your favorite food:
-            <select data-bind="options: activities, values: favoriteHobby"></select>
+            <p>City: <span data-bind="text: city"></span></p>
+            <p>District: <span data-bind="text: district"></span></p>
         </div>
         <p><button data-bind="click: loadUserData">Load Data</button></p>
+        <p><button data-bind="click: saveData">Save Data</button></p>
     </form>
     <script type="text/javascript" src="knockout-3.5.1.js"></script>
     <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
     <script type="text/javascript">
+        function personViewModel() {
+            var self = this;
+            self.zipCode = ko.observable("60510175");
+            self.city = ko.observable("");
+            self.district = ko.observable("");
+            var url = "https://viacep.com.br/ws/" + self.zipCode() + "/json/";
+
+            self.loadUserData = function() {
+                $.getJSON(url, function(data) {
+                    self.city(data.localidade);
+                    self.district(data.bairro);
+                });
+            }
+            self.saveData = function() {
+                var data_to_send = {
+                    cityData: ko.toJSON(self)
+                };
+                $.post("/save_data", data_to_send, function(data) {
+                    alert("The data has been saved");
+                });
+            }
+        }
+        ko.applyBindings(new personViewModel());
     </script>
 </body>
 
