--- a/knockout/book_knockout_succinctly/index.html
+++ b/knockout/book_knockout_succinctly/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -14,10 +14,12 @@
     <form action="#" method="POST">
         <!--ToDo-->
     </form>
+    <input type="date" data-date="" data-date-format="dd/mm/yyyy" value="2015-08-09">
     <script type="text/javascript" src="knockout-3.5.1.js"></script>
     <script type="text/javascript">
         function personViewModel() {
-
+            var self = this;
+          
         }
     </script>
 </body>
